--- a/DownloadPDFFileAPI.ipynb
+++ b/DownloadPDFFileAPI.ipynb
@@ -86,8 +86,7 @@
      "text": [
       "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
       " * Running on http://127.0.0.1:5000\n",
-      "Press CTRL+C to quit\n",
-      "127.0.0.1 - - [17/Apr/2025 16:20:59] \"GET /download?filePath=https://upload-api-3.onrender.com/api/file/6800a1125c856f519197731c HTTP/1.1\" 415 -\n"
+      "Press CTRL+C to quit\n"
      ]
     },
     {
@@ -101,7 +100,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [17/Apr/2025 16:21:55] \"GET /download?= HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [17/Apr/2025 17:42:56] \"GET /download?filePath=https://upload-api-3.onrender.com/api/file/6800a1125c856f519197731c HTTP/1.1\" 200 -\n"
      ]
     },
     {
@@ -109,7 +108,7 @@
      "output_type": "stream",
      "text": [
       "Sending file: 6800a1125c856f519197731c.pdf with size: 2846371 bytes\n",
-      "Headers: {'Date': 'Thu, 17 Apr 2025 10:51:52 GMT', 'Content-Type': 'application/pdf', 'Transfer-Encoding': 'chunked', 'Connection': 'keep-alive', 'content-disposition': 'inline; filename=\"cloudflare_area_1_2023_type_2_soc_2.pdf\"', 'rndr-id': 'cc11f45d-4ba1-4b52', 'x-render-origin-server': 'Render', 'cf-cache-status': 'DYNAMIC', 'Server': 'cloudflare', 'CF-RAY': '931b5e934ba93c5e-BOM', 'alt-svc': 'h3=\":443\"; ma=86400'}\n"
+      "Headers: {'Date': 'Thu, 17 Apr 2025 12:12:55 GMT', 'Content-Type': 'application/pdf', 'Transfer-Encoding': 'chunked', 'Connection': 'keep-alive', 'content-disposition': 'inline; filename=\"cloudflare_area_1_2023_type_2_soc_2.pdf\"', 'rndr-id': '284f6abb-1c90-486d', 'x-render-origin-server': 'Render', 'cf-cache-status': 'DYNAMIC', 'Server': 'cloudflare', 'CF-RAY': '931bd54c784e2965-BOM', 'alt-svc': 'h3=\":443\"; ma=86400'}\n"
      ]
     }
    ],
@@ -148,8 +147,9 @@
     "    except Exception as e:\n",
     "        return abort(500, description=f\"Error downloading file: {str(e)}\")\n",
     "\n",
-    "    \n",
-    "app.run()"
+    "if __name__ == '__main__':\n",
+    "    port = int(os.environ.get('PORT', 5000))  # Use Render's PORT or default to 5000 locally\n",
+    "    app.run(host='0.0.0.0', port=port, debug=False)\n"
    ]
   },
   {
