--- a/SendResultAPI.ipynb
+++ b/SendResultAPI.ipynb
@@ -10,17 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d5885e18",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flask import Flask , request , jsonify"
+    "from flask import Flask , request , jsonify\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "620fedfe",
    "metadata": {},
    "outputs": [
@@ -76,7 +77,9 @@
     "                        }\n",
     "    )\n",
     "\n",
-    "app.run()\n"
+    "if __name__ == '__main__':\n",
+    "    port = int(os.environ.get('PORT', 5000))  # Use Render's PORT or default to 5000 locally\n",
+    "    app.run(host='0.0.0.0', port=port, debug=False)\n"
    ]
   }
  ],
